--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,13 @@ stages:
      - task: Docker@2
        inputs:
         containerRegistry: 'docker-workshop'
+        command: 'login'
+     - task: Docker@2
+       inputs:
+        containerRegistry: 'docker-workshop'
         repository: 'workshop'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
         tags: 'zappyhire-$(Build.BuildId)'
+        
+  
