--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ stages:
        inputs:
          targetType: 'inline'
          script: |
-           cd cdn/
+           cd terraform/
            terraform apply -var client_id=$(client_id) -var client_secret=$(client_secret) -var tenant_id=$(tenant_id) -var subscription_id=$(subscription_id) -var docker_user=$(docker_user) -var docker_pass=$(docker_pass) -var image_tag=zappyhire-$(Build.BuildId) -auto-approve
 
         
